test: DatabaseCleanupExtension MySQL 대응 (#246)